--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<h1 id="title" class="title">Login</h1>
+<h1 id="title" class="title">Entrar</h1>
 
 <!-- <nb-alert *ngIf="showMessages && showMessages.error && errors?.length && !submitted" outline="danger" role="alert"> -->
 <nb-alert *ngIf="showMessages && errors?.length && !submitted" outline="danger" role="alert">
