--- a/src/app/pages/clients/clients/clients.component.scss
+++ b/src/app/pages/clients/clients/clients.component.scss
@@ -1,22 +1,22 @@
 
-.label {
-    display: block;
-    margin-bottom: 0.5rem;
-}
+// .label {
+//     display: block;
+//     margin-bottom: 0.5rem;
+// }
 
-.form-inline {
-    display: flex;
-    flex: 1;
-    // align-items: center;
-}
+// .form-inline {
+//     display: flex;
+//     flex: 1;
+//     // align-items: center;
+// }
 
-.smart-table {
-    thead {
-        border: 1px solid #999;
-        border-radius: 25%;
-    }
-}
+// .smart-table {
+//     thead {
+//         border: 1px solid #999;
+//         border-radius: 25%;
+//     }
+// }
 
-nb-actions nb-action {
-    padding: 0 3px;
-}
+// nb-actions nb-action {
+//     padding: 0 3px;
+// }
