--- a/src/app/pages/professionals/professionals/professionals.component.html
+++ b/src/app/pages/professionals/professionals/professionals.component.html
@@ -1,6 +1,6 @@
 
 <nb-card>
-  <nb-card-header>Clientes</nb-card-header>
+  <nb-card-header>Profissionais</nb-card-header>
   <nb-card-body
     nbSpinnerStatus="primary"
     [nbSpinner]="isUpdatingData"
